--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,13 @@
     <string name="tv_intro_page3_green2">\'이번정류장\'이 여러분의\n행복한 출퇴근을 만들어 드리겠습니다!</string>
     <!--fragment main-->
     <string name="tv_all">전체 출근 노선</string>
+    <string name="tvSelLocal">지역을 선택해 주세요</string>
+    <string name="bt_local1">호매실동</string>
+    <string name="bt_local2">하남</string>
+    <string name="bt_local3">동탄</string>
+    <string name="tv_local1">서비스 지역 확대 예정입니다</string>
+    <string name="tv_local2">더욱 개선되는 이번정류장 앱이 될게요:)</string>
+    <string name="bt_new_route">노선 생성하기</string>
     <!--fragment login-->
     <string name="tv_login_title">로그인</string>
     <string name="tv_login_phone">휴대폰 번호</string>
