--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,5 +65,8 @@
     <string name="tv_continue">노선 신청을 이어서 진행하겠습니다</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!--Location Map Search Fragment-->
+    <string name="tv_mark_start">출발</string>
+    <string name="tv_mark_end">도착</string>
 
 </resources>
