--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,25 @@
 <resources>
-    <!--fragment splash-->
-    <string name="app_name">ThuStop_00</string>
-    <string name="tv_splash_subtitle">신개념 출퇴근 버스 노선 공유 버스</string>
-    <string name="tv_splash_copyright">ⓒ2019. ThusTop INC. all rights reserved</string>
-    <!--fragment intro base-->
+    <!--Fragment 이름 순으로 적어주세요-->
+    <!--이름이 앞에 fragment가 뒤로 오게 합시다 ex) main fragment!-->
+
+    <!--Add Route Map Search Fragment-->
+    <string name="tv_mark_start">출발</string>
+    <string name="tv_mark_end">도착</string>
+
+    <!--Add Route Time Set Fragment-->
+    <string name="tv_1">다음과 같은 노선을 생성할까요?</string>
+    <string name="tv_time">희망 도착 시간</string>
+
+    <!--Find Password Fragment-->
+    <string name="et_name_find">이름을 입력해주세요</string>
+    <string name="et_phone_find">휴대폰 번호를 입력해주세요</string>
+    <string name="bt_IssuePass_find">임시비밀번호 발급</string>
+
+    <!--intro base fragment-->
     <string name="bt_intro_start">이용시작</string>
     <string name="bt_intro_later">나중에 보기</string>
-    <!--fragment intro child(1,2,3)-->
+
+    <!--intro child(1,2,3) fragment-->
     <string name="tv_intro_page1">안녕하세요!\n\'이번정류장\'은 여러분의\n워라벨 업그레이드를 위한\n출퇴근 버스 매칭 서비스입니다.</string>
     <string name="tv_intro_page1_green">\'이번정류장\'</string>
     <string name="tv_intro_page2">환승 없이 집 앞에서 회사까지 한번에!\n집, 그리고 회사 앞에\n나만의 정류장을 만들어 보세요.\n</string>
@@ -14,17 +27,8 @@
     <string name="tv_intro_page3">처음 2회 무료티켓을 이용하여\n\'이번정류장\' 서비스를 경험 하신 후\n결제가 진행됩니다.\n\n\'이번정류장\'이 여러분의\n행복한 출퇴근을 만들어 드리겠습니다!</string>
     <string name="tv_intro_page3_green1">2회 무료티켓</string>
     <string name="tv_intro_page3_green2">\'이번정류장\'이 여러분의\n행복한 출퇴근을 만들어 드리겠습니다!</string>
-    <!--fragment main-->
-    <string name="tv_all">전체 출근 노선</string>
-    <string name="tvSelLocal">지역을 선택해 주세요</string>
-    <string name="bt_local1">호매실동</string>
-    <string name="bt_local2">하남</string>
-    <string name="bt_local3">동탄</string>
-    <string name="tv_local1">확장을 원하시는 서비스 지역을 요청해 주세요.</string>
-    <string name="tv_local2">서비스 이용 시작이 빨라질 수 있습니다</string>
-    <string name="tv_request"><u>요청하러가기</u></string>
-    <string name="bt_new_route">노선 생성하기</string>
-    <!--fragment login-->
+
+    <!--login fragment-->
     <string name="tv_login_title">로그인</string>
     <string name="tv_login_phone">휴대폰 번호</string>
     <string name="etv_login_phone">휴대폰 번호를 입력해주세요</string>
@@ -34,17 +38,31 @@
     <string name="bt_register">회원가입</string>
     <string name="bt_kakao_login">카카오톡으로 시작하기</string>
     <string name="bt_find_password">비밀번호가 기억나지 않으시나요?</string>
-    <!--fragmnet register-->
-    <string name="tv_pass">비밀번호</string>
+
+    <!--main fragment-->
+    <string name="tv_all">전체 출근 노선</string>
+    <string name="tvSelLocal">지역을 선택해 주세요</string>
+    <string name="bt_local1">호매실동</string>
+    <string name="bt_local2">하남</string>
+    <string name="bt_local3">동탄</string>
+    <string name="tv_local1">확장을 원하시는 서비스 지역을 요청해 주세요.</string>
+    <string name="tv_local1_color">서비스 지역</string>
+    <string name="tv_local2">서비스 이용 시작이 빨라질 수 있습니다</string>
+    <string name="tv_request"><u>요청하러가기</u></string>
+    <string name="bt_new_route">노선 생성하기</string>
+
+    <!--Register done fragment-->
+    <string name="tv_done_reg">회원가입을 완료했습니다</string>
+    <string name="bt_done_reg">완료</string>
+    <string name="tv_continue">노선 신청을 이어서 진행하겠습니다</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--Register password fragment-->
     <string name="et_pass">8자리 이상 비밀번호를 입력해주세요</string>
-    <string name="tv_check">비밀번호 확인</string>
     <string name="et_check">비밀번호를 확인해 주세요</string>
     <string name="bt_confirm">완료</string>
-    <!--fragment register complete-->
-    <string name="tv_done1">회원가입이 완료되었습니다</string>
-    <string name="tv_done2">노선 신청을 이어서 진행하겠습니다</string>
-    <string name="bt_done">완료</string>
-    <!--fragment agree terms-->
+
+    <!--Register terms fragment-->
     <string name="tv_agree">이용 약관에 동의해주세요</string>
     <string name="cb_agree_all">본인인증 이용 동의</string>
     <string name="cb_agree1">휴대폰본인확인이용약관(필수)</string>
@@ -55,23 +73,20 @@
     <string name="cb_agree6">마켓팅동의(선택)</string>
     <string name="bt_agree">동의</string>
 
-    <!--Find Password Fragment-->
-    <string name="et_name_find">이름을 입력해주세요</string>
-    <string name="et_phone_find">휴대폰 번호를 입력해주세요</string>
-    <string name="bt_IssuePass_find">임시비밀번호 발급</string>
+    <!-- Register verification fragment-->
+    <string name="tv_verification_nation">내국인</string>
+    <string name="et_verification_name">이름</string>
+    <string name="et_verification_birth">생년월일</string>
+    <string name="et_verification_phone">휴대폰 번호</string>
+    <string name="tv_verification_agency">통신사</string>
+    <string name="bt_verification_send">전송</string>
+    <string name="bt_verification_done">완료</string>
 
-    <!--Done Register Fragment-->
-    <string name="tv_done_reg">회원가입을 완료했습니다</string>
-    <string name="bt_done_reg">완료</string>
-    <string name="tv_continue">노선 신청을 이어서 진행하겠습니다</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <!--Location Map Search Fragment-->
-    <string name="tv_mark_start">출발</string>
-    <string name="tv_mark_end">도착</string>
+    <!--fragment splash-->
+    <string name="app_name">ThuStop_00</string>
+    <string name="tv_splash_subtitle">신개념 출퇴근 버스 노선 공유 버스</string>
+    <string name="tv_splash_copyright">ⓒ2019. ThusTop INC. all rights reserved</string>
 
-    <!--Add Route Time Set Fragment-->
-    <string name="tv_1">다음과 같은 노선을 생성할까요?</string>
-    <string name="tv_time">희망 도착 시간</string>
 
 </resources>
