--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,9 +45,9 @@
     <string name="bt_local1">호매실동</string>
     <string name="bt_local2">하남</string>
     <string name="bt_local3">동탄</string>
-    <string name="tv_local1">확장을 원하시는 서비스 지역을 요청해 주세요.</string>
-    <string name="tv_local1_color">서비스 지역</string>
-    <string name="tv_local2">서비스 이용 시작이 빨라질 수 있습니다</string>
+    <string name="tv_local1">우리 동네에도 필요해요!</string>
+    <string name="tv_local1_color">우리 동네</string>
+    <string name="tv_local2">이웃과 함께 지역 요청을 하시면 서비스 이용 시작이 빨라집니다:)</string>
     <string name="tv_request"><u>요청하러가기</u></string>
     <string name="bt_new_route">노선 생성하기</string>
 
