노선 조회 맵 완성(추후 재활용해야함), 탑승 신청 레이아웃 작업하다 힘들어 도망

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,8 +110,14 @@
     <string name="tv_splash_subtitle">신개념 출퇴근 버스 노선 공유 버스</string>
     <string name="tv_splash_copyright">ⓒ2019. ThusTop INC. all rights reserved</string>
 
-    <!--fragment route inquiry-->
+    <!--dialog route detail-->
     <string name="tv_route_caution">• 탑승 당일, 도로상황 및 기상환경에 따른 일부 지연이\n    발생할 수도 있습니다.(±5~10분)\n• 하차 시간은 희망 도착 시간보다 빠를 수 있습니다.\n• 차량 정보와 기사님 정보는 결제 후에 안내됩니다.</string>
 
-
+    <!--fragment boarding application-->
+    <string name="tv_fba_big_boarding">탑승하실 정거장을 선택해주세요</string>
+    <string name="tv_fba_big_boarding_colored">탑승하실 정거장</string>
+    <string name="tv_fba_small_boarding">회원님과 가장 가까운 위치의 정거장을 선택해주세요</string>
+    <string name="tv_fba_big_alighting">하차하실 정거장을 선택해주세요</string>
+    <string name="tv_fba_big_alighting_colored">하차하실 정거장</string>
+    <string name="tv_fba_small_alighting">목적지와 가장 가까운 위치의 정거장을 선택해주세요</string>
 </resources>
