--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <!--Fragment 이름 순으로 적어주세요-->
     <!--이름이 앞에 fragment가 뒤로 오게 합시다 ex) main fragment!-->
 
+
     <!--Add Route Map Search Fragment-->
     <string name="tv_mark_start">출발</string>
     <string name="tv_mark_end">도착</string>
@@ -9,6 +10,7 @@
     <!--Add Route Time Set Fragment-->
     <string name="tv_1">다음과 같은 노선을 생성할까요?</string>
     <string name="tv_time">희망 도착 시간</string>
+    <string name="tv_time_notice">*배차나 교통상황에 따라 시간차가 있을 수 있습니다.</string>
 
     <!--boarding application fragment-->
     <string name="tv_fba_big_boarding">탑승하실 정거장을 선택해주세요</string>
@@ -17,6 +19,7 @@
     <string name="tv_fba_big_alighting">하차하실 정거장을 선택해주세요</string>
     <string name="tv_fba_big_alighting_colored">하차하실 정거장</string>
     <string name="tv_fba_small_alighting">목적지와 가장 가까운 위치의 정거장을 선택해주세요</string>
+
 
     <!--Find Password Fragment-->
     <string name="et_name_find">이름을 입력해주세요</string>
@@ -78,7 +81,6 @@
     <string name="tv_leave">탈퇴하기</string>
 
 
-
     <!-- Notice Ticket Point Dialog-->
     <string name="tv_notice_title">티켓포인트로 전환이란?</string>
     <string name="tv_explain1">불가피한 상황으로 버스 탑승을\n하지 못했을 때 티켓을 포인트로 전환하는 제도입니다.</string>
@@ -103,14 +105,15 @@
     <string name="bt_confirm">완료</string>
 
     <!--Register terms fragment-->
-    <string name="tv_agree">이용 약관에 동의해주세요</string>
+    <string name="tv_agree">이용약관에 동의해주세요</string>
     <string name="cb_agree_all">본인인증 이용 동의</string>
-    <string name="cb_agree1">휴대폰본인확인이용약관(필수)</string>
-    <string name="cb_agree2">통신사본인확인이용약관(필수)</string>
-    <string name="cb_agree3">고유식별정보처리동의(필수)</string>
-    <string name="cb_agree4">개인정보수집이용/취급위탁동의(필수)</string>
-    <string name="cb_agree5">개인정보제3자제공동의(필수)</string>
-    <string name="cb_agree6">마켓팅동의(선택)</string>
+    <string name="cb_agree1">(필수) 휴대폰 본인확인 이용약관</string>
+    <string name="cb_agree2">(필수) 통신사 본인확인 이용약관</string>
+    <string name="cb_agree3">(필수) 고유식별정보 처리동의</string>
+    <string name="cb_agree4">(필수) 개인정보 수집 이용/취급위탁 동의</string>
+    <string name="cb_agree5">(필수) 개인정보 제3자 제공동의</string>
+    <string name="cb_agree6">(필수) 마켓팅 동의</string>
+    <string name="tv_view"><u>보기</u></string>
     <string name="bt_agree">동의</string>
 
     <!-- Register verification fragment-->
@@ -142,9 +145,163 @@
     <string name="tv_route_caution">• 탑승 당일, 도로상황 및 기상환경에 따른 일부 지연이\n    발생할 수도 있습니다.(±5~10분)\n• 하차 시간은 희망 도착 시간보다 빠를 수 있습니다.\n• 차량 정보와 기사님 정보는 결제 후에 안내됩니다.</string>
 
 
-
     <!--counselling fragment-->
     <string name="tv_fc_recommendation">실시간으로 깃플이 고객님의 문제를 도와드립니다.\n아래 상담하기를 눌러 상담을 시작해보세요!</string>
     <string name="tv_fc_description">월/화/수/목/금 : 오전 9시 ~ 오후 6시\n점심시간 : 12시 ~ 1시</string>
+
+
+    <!--**************************Terms policies*******************************-->
+    <!--Dialog terms and polices-->
+    <string name="service_terms_content">제1 장. (총칙)\n\n
+        제1조 (목적)\n
+        이 약관은 주식회사 더스탑(이하 사업단이라 함)이 스마트폰 어플리케이션(이번정류장)을 통하여 제공하는 서비스(이하 서비스라고 함)와 관련하여 사업단과 회원 간의 권리와 의무 및 책임사항을 규정함을 목적으로 합니다.\n
+        \n
+        제2조 (약관의 효력 및 변경)\n
+        ① 이 약관은 서비스가 제공되는 스마트폰 어플리케이션(이번정류장)을 통하여 이를 공지함으로써 효력이 발생됩니다.\n
+        ② 사업단은 사정 변경의 경우와 영업상 중요 사유가 있을 때 약관의 규제 등에 관한 법률 등 관련법을 위반하지 않는 범위에서 이 약관을 변경할 수 있으며, 이 경우에는 적용 일자 및 개정사유, 변경되는 내용을 명시하여 현행 약관과 함께 공지사항에 그 적용 일자 7일 전부터 적용 일자 전일까지 공지합니다. “회원“은 별도의 의사표시가 없는 한 사업단의 약관변경에 동의하는 것으로 약정합니다.\n
+        \n
+        제3조 (약관 외 준칙)\n
+        ① 본 약관에 명시되지 아니한 사항에 대해서는 관련 법령의 규정에 따릅니다.\n
+        ② 회원은 사업단이 제공하는 서비스를 이용함에 있어서 관련 법령을 준수하여야 하며, 이 약관의 규정을 들어 관련 법령 위반에 대한 면책을 주장할 수 없습니다.\n
+        \n
+        제4조 (용어 정의)\n
+        ① 이 약관에서 사용하는 용어의 정의는 다음 각호와 같습니다.\n
+        1. 회원: 이 약관을 승인하고 인증받은 휴대폰 번호를 통해 회원가입하여 회사와 서비스 이용계약을 체결한 자를 말합니다.\n
+        2. 아이디: 회원의 식별과 회원의 서비스 이용을 위하여 휴대폰 번호 기반 사업단이 승인하여 구성하는 식별문자나 숫자 혹은 그 조합을 말합니다.\n
+        3. 비밀번호: 회원이 부여 받은 아이디와 일치된 회원임을 확인하고, 회원 자신의 비밀을 보호하기 위하여 회원이 정한 문자와 숫자의 조합을 말합니다.\n
+        4. 정보변경: 사업단이 각 회원에 대한 기록을 모아 각 회원이 서비스를 신속하고 편리하게 이용하도록 하기 위하여 제공하는 서비스 화면을 말합니다.\n
+        \n
+        제2 장. 회원가입 및 탈퇴\n
+        \n
+        제5조 (이용계약의 성립)\n
+        ① 이용계약은 이용 희망자의 이용신청(회원가입신청)에 대하여 사업단이 승낙(회원가입성공) 함으로써 성립합니다.\n
+        ② 가입신청일시 기준으로 휴대폰번호를 인증한 회원만이 사업단의 서비스를 이용할 수 있습니다. (노선 생성하기, 노선 신청하기, 결제 등)\n
+        ③ 아이디는 1인당 인증받은 휴대폰번호 1개로만 연계되어 사용할 수 있으며, 이용계약은 아이디 단위로 체결하는 것을 원칙으로 합니다.\n
+        ④ 타인의 휴대폰번호를 도용하여 허위 가입한 회원은 법적인 보호를 받을 수 없으며, 이에 따른 민사, 형사상의 모든 책임은 가입한 회원이 져야 합니다.\n
+        ⑤ 회원의 잘못으로 인해 어플리케이션 이용과 관련하여 민형사상의 문제가 발생하거나, 발생할 가능성이 있다고 사업단이 판단할 경우 사업단은 약관에 의해 보장된 회원의 일체의 권리를 문제가 완전히 해소되기 이전까지 이용을 제한할 수 있습니다.\n
+        \n
+        제6조 (이용신청)\n
+        ① 서비스 이용 신청은 어플리케이션 상에서 하며, 다음 사항을 필수사항으로 하며, 그 외 사항은 선택 사항으로 합니다.\n
+        1. 필수사항 회원 아이디(회원: 휴대폰번호, 사업단: 휴대폰번호 기반 식별 문자 혹은 숫자로 구성)\n
+        ② 회원 등록 시 거짓 정보나 정보 오류로 인한 일체의 문제는 등록한 회원의 책임입니다. (탑승자 그룹으로 참여하여 전세버스 중개 이용 시 발생하는 문제 또한 동일합니다)\n
+        1. 회원은 이용 신청과 관련하여 입력한 정보 및 그 정보와 관련하여 발생한 책임과 불이익은 전적으로 회원이 부담하여야 합니다.\n
+        ③ 사실과 다른 정보, 거짓 정보를 기입하거나 추후 그러한 정보임이 밝혀질 경우 운영자의 권한으로 서비스 이용을 일시 정지하거나 영구정지 및 이용 계약을 해지할 수 있습니다. 이로 인하여 회사 또는 제3자에게 발생한 손해는 해당 회원이 모든 책임을 집니다.\n
+        ④ 회원은 서비스 조건(출발위치, 도착위치, 금액, 기간 등)을 확인한 후 이용 신청을 하여야 합니다. (탑승신청) 서비스 조건을 확인하지 않고 이용 신청을 하여 발생한 손실, 손해에 대한 책임은 회원 본인이 부담하여야 합니다.\n
+        ⑤ 사업단은 회원에게 사업단의 서비스에 대한 다양하고 유익한 정보를 E-mail, 서신 우편, 전화 등을 통하여 제공할 수 있습니다.\n
+        \n
+        제7조 (이용신청 승낙 및 제한)\n
+        ① 사업단은 회원으로 가입하려는 자가 제6조에서 제시한 모든 사항을 정확히 기재하여 이용 신청을 하였을 때 회원으로 승낙합니다.\n
+        ② 사업단은 다음 각호에 해당하는 경우 이용신청에 대한 승낙을 제한할 수 있고, 그 사유가 해소될 때까지 승낙을 유보할 수 있습니다.\n
+        1. 서비스 관련 설비에 여유가 없는 경우\n
+        2. 기술상 지장이 있는 경우\n
+        3. 기타 사업단의 사정상 필요하다고 인정되는 경우\n
+        ③ 사업단은 다음 각호에 해당하는 사항을 인지하는 경우 동 이용계약 신청을 승낙하지 아니할 수 있습니다.\n
+        1. 본인의 휴대폰번호로 신청하지 않은 경우\n
+        2. 다른 사람의 명의를 사용하여 신청한 경우\n
+        3. 이용 신청 시 필요 사항을 허위로 기재하여 신청한 경우\n
+        4. 사회의 안녕과 질서 혹은 미풍양속을 저해할 목적으로 신청한 경우\n
+        5. 사업단의 해지 조건에 의해 이용계약이 해지된 회원인 경우\n
+        6. 이미 가입된 회원의 휴대폰번호와 동일한 경우\n
+        7. 가입 시 휴대폰번호 또는 탑승자 그룹참여(탑승신청) 시 성명이 불량한 경우\n
+        8. 기타 사업단이 정한 이용 신청 요건이 미비 된 경우\n
+        ④ 제 2 항 또는 3 항에 의하여 이용신청의 승낙을 유보하거나 승낙하지 아니하는 경우, 사업단은 이를 이용신청자에게 알려야 합니다. 다만, 사업단의 귀책사유 없이 이용신청자에게 통지할 수 없는 경우는 예외로 합니다.\n
+
+        제8조 (이용계약의 종료)\n
+        ① 이용계약은 회원 또는 사업단의 해지에 의해 종료됩니다.\n
+        ② 회원에 의한 해지\n
+        1. 회원은 사업단에 해지의사를 통보함으로써 이용계약을 해지할 수 있습니다. 단, 해지의사 통보 시 모든 서비스에 관련된 회원의 권리의무사항을 모두 철회 또는 취소하여야 합니다. 이 경우 발생가능한 불이익은 회원이 책임을 져야 합니다.\n
+        2. 회원이 이용계약을 해지한 경우, 이용계약은 해지의사가 사업단에 도달되어 운영자에 의해 처리된 때에 종료됩니다.\n
+        3. 이용계약이 해지된 회원의 개인 신상 정보 처리는 제14조에 의합니다.\n
+        4. 이용계약에 대한 해지 시 환불은 서비스 정책에 의거합니다. (서비스 신청 참여 및 탑승에 대한 해지)\n
+        가. 노선 신청하기를 통해 정해진 마감일까지 운행 가능한 최소 인원이 모이면 그 날을 기준으로 다음주 월요일까지 회비를 납부해야 하고 월요일에 운행이 시작됩니다.\n
+        나. 탑승 시작 전날(일요일)까지는 100%환불이 가능합니다.\n
+        다. 탑승 시작일(월요일)부터 그 주 금요일(일주일 이내)까지는 30%의 환불이 가능합니다.\n
+        라. 회원은 월회비 납부 후, 탑승 시작일 일주일 이후부터는 환불이 불가능합니다.\n
+        나. 회원의 개별 일정에 따른 일할 계산 및 탑승기간 조정은 불가능합니다.\n
+        다. 탑승기간이 지나면 잔여 일수가 소멸되며, 남은 탑승기간은 타인에게 양도 불가능합니다.\n
+        라. 회원은 본 약관 및 회사가 서비스와 관련하여 고지하는 내용을 준수하여야 하며, 약관 및 고지 내용을 위반하거나 이행하지 아니하여 발생하는 모든 손실, 손해에 대하여 책임을 부담합니다.\n
+        ③ 사업단에 의한 해지\n
+        1. 사업단은 다음과 같은 사유가 있는 경우, 이용계약을 해지할 수 있습니다. 이 경우 사업단은 회원에게 E-mail, 전화, 팩스, 휴대폰, 기타의 방법 중 한가지를 선택하여 해지사유를 밝혀 해지의사를 통지합니다. 다만, 사업단은 해당 회원에게 사전에 해지사유에 대한 의견진술의 기회를 부여할 수 있습니다.\n
+        가. 불법 게시물 및 음란물을 등록하거나 공공질서 및 미풍양속에 위배되는 행위를 하거나 시도한 경우\n
+        나. 회사나 다른 회원, 기타 타인의 권리나 명예, 신용 기타 정당한 이익을 침해한 경우\n
+        다. 사업단이 제공하는 서비스의 원활한 진행을 방해하거나 방해가 될 수 있는 행위를 한 경우\n
+        라. 범죄 유발한다고 회사 판단하는 행위\n
+        마. 욕설이나 비방을 하는 행위\n
+        바. 성명 또는 휴대폰 번호가 본인과 불일치하거나 불량한 경우\n
+        사. 타인의 결제수단(신용카드 / 휴대폰 번호)을 도용한 경우\n
+        아. 타인의 아이디 또는 휴대폰 번호를 도용한 경우\n
+        자. 본 약관의 내용을 위반하는 행위\n
+        차. 운영자가 합리적 판단에 의해 회원의 자격을 정지, 해지하는 경우\n
+        카. 결제기한 내 월회비 미납, 월회비 미납 후 무단으로 탑승자 그룹 참여 및 탑승하는 경우\n
+        2. 이용계약은 사업단이 회원에게 해지의사를 통보한 시점에 종료됩니다. 회원이 제공한 연락처 정보의 오류로 인하여 도달할 수 없는 경우에도 동일합니다.\n
+        3. 이용계약의 종료와 관련하여 발생한 손해는 이용계약이 종료된 해당회원이 책임을 부담하여야 하고, 사업단은 일체의 책임을 지지 않습니다.\n
+        \n
+        제3 장. 서비스 이용\n
+        \n
+        제9조 (회원 아이디 관리 등)\n
+        ① 회원 아이디, 비밀번호는 다른 사람에게 양도, 임대, 대여 할 수 없습니다.\n
+        ② 사업단은 회원 아이디에 의해 경매진행 등 사용자 관리업무를 수행하며 사업단이 인정하는 정당한 사유가 없는 한 회원은 회원 아이디를 공유, 변경할 수 없습니다.\n
+        ③ 회원이 자신의 아이디 및 비밀번호를 도난당하거나 제3자가 사용하고 있음을 인지한 경우에는 바로 사업단에 통보하고 사업단의 안내가 있는 경우에는 그에 따라야 합니다.\n
+        ④ 회원에게 부여된 회원 아이디 및 비밀 번호의 관리소홀, 부정사용에 의하여 발생하는 모든 결과에 대한 책임은 회원에게 있습니다.\n
+        \n
+        제10조 (서비스 종류)\n
+        ① 회사에서 제공하는 서비스에는 전세버스 중개, 노선 경로제작 및 관리, 탑승자그룹관리, 고객서비스 등이 있습니다.\n
+        ② 사업단이 제공하는 서비스의 종류는 사업단의 사정에 따라 수시로 변경될 수 있습니다.\n
+        \n
+        제11조 (서비스 내용의 공지 및 변경)\n
+        ① 위 제10조 각 항의 서비스 이용에 관해 필요한 사항은 사업단이 정하여 서비스 화면의 공지사항 및 이용안내 게시판 또는 별도의 내용으로 공지합니다. (예: 정책 변동 공지 등)\n
+        ② 사업단은 서비스 내용이 변경되는 경우 변경 7일 이전에 공지하는 것으로 합니다. 다만 급박한 사정이 있는 경우는 그 사정을 공지하고 서비스 내용을 변경할 수 있습니다. 회원이 공지 내용을 조회하지 않아 입은 손해에 대하여는 배상하지 않습니다.
+        ③ 사업단은 영업상 목적을 위해 별도의 매매서비스를 제공할 수 있으며, 그에 참여하고자 하는 회원은 별도의 신청 및 개별약관에 동의하여야 합니다.\n
+        \n
+        제12조 (서비스의 유지 및 중지)\n
+        ① 사업단은 서비스 제공을 항상 운용 가능한 상태로 유지하기 위하여 노력하며 서비스 제공에 장애가 발생하는 등의 경우 이를 신속하게 수리, 복구해야 합니다.\n
+        ② 사업단은 다음 각호에 해당하는 경우 서비스 제공을 중지할 수 있습니다.\n
+        가. 서비스용 설비의 보수 등 공사로 인한 부득이한 경우\n
+        나. 전기통신사업법에 규정된 기간통신사업자가 전기통신서비스를 중지했을 경우\n
+        다. 국가 비상사태, 정전, 서비스 설비의 장애 또는 서비스 이용의 폭주, 천재지변 등으로 정상적인 서비스 이용에 지장이 있는 경우\n
+        ③ 위 제2항 각호의 경우에 의한 서비스 제공 중단 시 사업단은 회원들이 입은 손해에 대해 책임을 지지 않습니다.\n
+        \n
+        제13조 (회원의 서비스 이용 정지 및 이용 정지 해제)\n
+        ① 회원은 다음 내용에 해당하는 행위를 해서는 안 되며, 만약 이에 해당하는 경우 서비스 이용이 즉시 정지됩니다.\n
+        1. 조건 제한기간 및 내용\n
+        2. 휴대폰번호 불량 등 이용정지\n
+        3. 서비스 진행 방해 이용정지\n
+        4. 범죄와 결부된다고 판단되는 경우 이용해지\n
+        5. 타인의 아이디를 부정하게 사용한 때 이용해지\n
+        6. 기타 관계 법령 및 이용약관, 서비스 정책에 위배되는 행위 이용해지\n
+        ② 사업단은 필요시 별도의 기준을 통해 회원의 신청이 있는 경우나, 이용편의를 위해 조정할 수 있습니다.\n
+        \n
+        제4 장. 정보 보호\n
+        \n
+        제14조 (회원정보 수집과 보호)\n
+        ① 사업단은 회원의 개인정보를 보호하고 존중합니다.\n
+        ② 회원의 개인정보에 대해서는 사업단의 개인정보 보호 정책이 적용됩니다. 회원이 이용 신청서에 회원정보를 기재하고, 사업단에 본 약관에 따라 이용 신청하는 것은 사업단이 본 약관에 따라 이용신청서에 기재된 회원정보를 수집, 이용 및 제공하는 것에 동의하는 것으로 간주됩니다. 회원정보의 관리 책임자는 사업단이 정하는 운영자입니다.\n
+        ③ 회원이 회사 및 회사와 제휴한 서비스들을 유용하고 편리하게 이용할 수 있도록 하기 위해 사업단은 본 계약에 정해진 절차에 따라 회원 정보를 이용하거나 회사와 제휴한 업체에 제공할 수 있습니다. 단, 사업단은 전기통신 기본법 등 법률의 규정에 의해 국가기관의 요구가 있는 경우, 범죄에 대한 수사상의 목적이 있거나 정보통신윤리위원회의 요청이 있는 경우 또는 기타 관계법령에서 정한 절차에 따른 요청이 있는 경우를 제외하고는 언제나 제휴 업체, 제공 목적, 제공할 회원 정보내용 등을 사전에 공지하고 회원의 동의를 얻은 경우에 한하여 회원의 정보를 제3자에게 공개하거나 배포합니다.\n
+        ④ 이용 신청자 또는 회원이 이용신청 시 기재한 신상정보가 변경이 되었을 경우에는 즉시 운영자 또는 회원정보 변경 창을 통해서 관련사항을 수정하여야 합니다. 단, 회원 아이디는 신용관리상 변경할 수 없습니다.\n
+        ⑤ 전항의 경우, 수정하지 않은 정보로 인한 각종 손해는 당해 회원이 부담하며, 사업단은 이에 대하여 아무런 책임을 지지 않습니다.\n
+        ⑥ 회원이 사업단의 개인정보 취급에 대해서 불만을 가질 경우 서면상으로 사업단에 관련 내용을 제출하여야 하며 이 경우 사업단은 적법한 절차에 따라 회원의 불만을 처리합니다.\n
+        ⑦ 회원의 이용계약 해지는 제8조에 따르며, 이용계약이 해지된 경우 회원의 신상정보는 하드디스크에서 완전히 삭제합니다. 단, 이용계약 해지 후 서비스 이용에 대한 법적인 조치를 이유로 관계기관에서 회원정보를 요청할 경우를 대비하여 회원정보를 문서화하여 탈퇴 후 1년간 별도 관리한 후 파기 처리합니다.\n
+        ⑧ 사업단은 동조에 의하여 개인정보를 파기하여야 할 의무가 있는 경우라도 상법 등 관계 법령의 규정에 의하여 보존할 필요가 있는 경우에는 관계법령에서 정한 기간동안 회원의 개인 정보를 보관합니다.\n
+        ⑨ 특정 서비스 사용을 위해 개인정보를 수집하거나 전송할 필요가 있을 경우, 사업단은 반드시 회원에게 이와 같은 사실을 사전 공지하고 회원의 동의를 구해야 하며, 서비스 이용 시 자동 동의로 간주합니다. (예: 기사님 정보 전달 등)\n
+        \n
+        제15조 (법정대리인의 권리)\n
+        ① 사업단은 법률상 미성년자의 회원으로부터 수집한 개인정보에 대하여 법정대리인이 열람 또는 정정을 요구하는 경우에는 필요한 조치를 취하여야 합니다.\n
+        ② 사업단은 법률상 미성년자의 회원으로부터 수집한 개인정보의 이용 및 제공에 대하여 법정대리인이 동의를 철회하는 경우에는 필요한 조치를 취하여야 합니다.\n
+        \n
+        제16조 (저작권의 귀속 및 이용제한)\n
+        ① 사업단이 작성한 저작물에 대한 저작권 기타 지적재산권은 사업단에 귀속합니다.\n
+        ② 회원은 사업단의 서비스를 이용함으로써 습득한 정보 중 사업단에 지적재산권이 귀속된 정보를 사업단의 서면에 의한 사전승낙없이 복제, 송신, 출판, 배포, 방송 기타의 방법에 의하여 이용하거나 제3자에게 제공 또는 이용하게 하여서는 안 되며, 이를 위반하여 발생한 일체의 손해에 대해 배상책임을 부담합니다.\n
+        \n
+        제17 조(분쟁해결)\n
+        ① 사업단은 회원이 제기하는 정당한 의견이나 불만을 수렴하기 위한 제도를 운영합니다.\n
+        ② 사업단의 서비스 이용과 관련하여 분쟁이 발생될 경우 대한민국 국내법을 적용하며, 사업단의 본사 소재지를 관할하는 법원을 관할 법원으로 하여 이를 해결합니다.\n
+        \n
+        부칙\n
+        이 약관은 2020년12월 25일부터 시행됩니다.\n
+        </string>
+
+    <string name="location_terms_content">위치기반서비스 이용약관</string>
+    <string name="personal_data_policies_content">개인정보 처리방침</string>
+    <string name="operational_policies_content">개인정보 처리방침</string>
 
 </resources>
