--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -303,5 +303,12 @@
     <string name="location_terms_content">위치기반서비스 이용약관</string>
     <string name="personal_data_policies_content">개인정보 처리방침</string>
     <string name="operational_policies_content">개인정보 처리방침</string>
+    <string name="business_information_content">
+        이번정류장\n\n
+        대표 : 김민규\n
+        사업자등록번호 : 419-87-01451\n
+        주소 : 경기도 수원시 팔달구 향교로 160, 수원시지속가능도시재단 창업관 404호\n
+        고객센터 : 031-548-1610\n
+        메일주소 : thustop2019@gmail.com</string>
 
 </resources>
