티켓 로드 및 표시 완성(상태에 따른 색은 아직 반영 안함)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,16 +104,16 @@
     <string name="et_check">비밀번호를 확인해 주세요</string>
     <string name="bt_confirm">완료</string>
 
-    <!--Register terms fragment-->
+    <!--Register terms fragment TODO 약관 동의 항목 정리해야함-->
     <string name="tv_agree">이용약관에 동의해주세요</string>
     <string name="cb_agree_all">본인인증 이용 동의</string>
-    <string name="cb_agree1">(필수) 휴대폰 본인확인 이용약관</string>
-    <string name="cb_agree2">(필수) 통신사 본인확인 이용약관</string>
-    <string name="cb_agree3">(필수) 고유식별정보 처리동의</string>
+    <string name="cb_terms_of_service">(필수) 서비스 이용약관</string>
+    <string name="cb_terms_of_personal_info">(필수) 개인정보 수집 이용/취급위탁 동의</string>
+    <string name="cb_terms_of_marketing">(선택) 마켓팅 동의</string>
     <string name="cb_agree4">(필수) 개인정보 수집 이용/취급위탁 동의</string>
     <string name="cb_agree5">(필수) 개인정보 제3자 제공동의</string>
     <string name="cb_agree6">(필수) 마켓팅 동의</string>
-    <string name="tv_view"><u>보기</u></string>
+    <string name="tv_view">보기</string>
     <string name="bt_agree">동의</string>
 
     <!-- Register verification fragment-->
@@ -152,7 +152,7 @@
 
     <!--**************************Terms policies*******************************-->
     <!--Dialog terms and polices-->
-    <string name="service_terms_content">제1 장. (총칙)\n\n
+    <string name="terms_of_service_content">제1 장. (총칙)\n\n
         제1조 (목적)\n
         이 약관은 주식회사 더스탑(이하 사업단이라 함)이 스마트폰 어플리케이션(이번정류장)을 통하여 제공하는 서비스(이하 서비스라고 함)와 관련하여 사업단과 회원 간의 권리와 의무 및 책임사항을 규정함을 목적으로 합니다.\n
         \n
@@ -299,6 +299,84 @@
         부칙\n
         이 약관은 2020년12월 25일부터 시행됩니다.\n
         </string>
+
+    <string name="terms_of_personal_info_content">
+        주식회사 더스탑(이하 사업단이라 함)은 사업단이 운영하는 사이트에서 회원의 개인정보를 최적의 서비스 이용을 위해서 사용하고, 회원의 동의 없이 제3자에게 제공하지 않으며, 개인정보가 유출되어 피해를 입지 않도록 개인정보 보호에 최선을 다할 것입니다. 회원 여러분은 언제든지 이 보호 정책을 열람하여 확인하실 수 있으며, 개인정보 보호 정책은 법령 및 정부지침의 변경과 보다 나은 서비스 제공을 위해서 그 내용이 변경될 수 있습니다.\n
+        \n
+        제1조 (총 칙)\n
+        개인정보가 어떠한 용도와 방식으로 이용되고 있으며, 사업단이 개인정보보호를 위해 어떠한 조치를 취하고 있는지 알려드립니다.\n
+        (1) 사업단은 개인정보보호 방침을 첫 화면 및 대부분 화면의 아래쪽에 공개/공지함으로써 회원께서 언제나 용이하게 보실 수 있도록 조치하고 있습니다.\n
+        (2) 사업단은 개인정보보호 방침의 지속적인 개선을 위하여 개인정보보호 방침을 개정할 것이며, 이를 개정하는 경우, 사업단의 홈페이지 및 어플리케이션 상에 공지할 것입니다.\n
+        \n
+        제2조 (개인정보의 수집)\n
+        (1) 개인정보의 수집목적 및 수집범위\n
+        ① 사업단은 회원께 기본적으로 제공되는 서비스 외 부가적인 서비스 제공을 위하여 필요한 최소한의 개인정보를 수집하고 있습니다.\n
+        ② 사업단의 이용하는 서비스의 형태에 따라 다음과 같은 개인정보를 수집 및 이용/제공/파기하고 있습니다.\n
+        가. 사업단은 회원기반 서비스 제공을 위해 다음과 같이 개인정보를 수집, 이용, 파기합니다.\n
+        ㄱ. 회원 가입은 필수이며 실명을 입력합니다. 이는 서비스 이용 및 상담을 위한 이용자 식별을 위함입니다. 무분별한 회원 탈퇴와 재가입으로 인한 피해 최소화, 회원탈퇴 후 변심에 의한 민원처리 등을 처리하기 위하여 회원 탈퇴 후 6개월간 최소한의 회원 정보를 보유합니다.\n
+        ㄴ. 회원 가입은 선택이며 SNS(페이스북, 네이버, 카카오), 이메일, 생년월일, 성별, 연계정보(CI)를 입력합니다. 이는 각각 SNS 계정을 통한 간편 가입, 기업 제휴 인증, 맞춤형 서비스 추천 등의 마케팅 활용, 임의해지 등을 반복적으로 행하는 등 회사가 제공하는 할인쿠폰, 이벤트 혜택 등의 경제상의 이익을 불/편법적으로 수취하는 행위 및 명의도용 등의 불/편법 행위를 차단하기 위함입니다. 무분별한 회원 탈퇴와 재가입으로 인한 피해 최소화, 회원탈퇴 후 변심에 의한 민원처리 등을 처리하기 위하여 회원 탈퇴 후 6개월간 최소한의 회원 정보를 보유합니다.\n
+        ㄷ. 휴대전화 인증을 진행해야 하며 휴대전화 번호를 입력합니다. 이는 본인 인증 및 서비스 이용을 위함입니다. 무분별한 회원 탈퇴와 재가입으로 인한 피해 최소화, 회원탈퇴 후 변심에 의한 민원처리 등을 처리하기 위하여 회원 탈퇴 후 6개월간 최소한의 회원 정보를 보유합니다.\n
+        나. 사업단은 탑승 및 노선 제작 신청 등 서비스 제공을 위해 다음과 같이 개인정보를 수집, 이용, 파기합니다.\n
+        ㄱ. 서비스 신청을 할 수 있으며 신청정보(이름, 출발위치, 도착위치)을 입력합니다. 이는 서비스 신청내역 확인 및 관련 상담을 제공하기 위함입니다. 이 정보는 계약 및 철회, 결제 및 공급의 이유로 5년 동안 보유합니다.\n
+        ㄴ. 결제취소 및 환불을 할 수 있으며 환불 계좌번호, 은행명, 예금주명을 입력합니다. 결제 서비스 환불을 제공하기 위함입니다. 이 정보는 계약 및 철회, 결제 및 공급의 이유로 5년 동안 보유합니다.\n
+        다. 사업단은 회원의 이벤트 참여에 따라 아래와 같이 개인정보를 수집, 이용, 파기합니다.\n
+        ㄱ. 이벤트에 참여할 수 있으며, 닉네임 및 이름, 휴대전화 번호, 이메일 주소를 입력합니다. 이는 이벤트 참여자 식별 및 당첨자 선정을 위함입니다. 이 정보는 경품 발송 및 반송의 이유로 이벤트 종료 후 1개월 이후에 폐기합니다.\n
+        ㄴ. 이벤트에 당첨될 수 있으며, 닉네임 및 이름, 휴대전화 번호, 이메일 주소를 입력합니다. 이는 이벤트 당첨에 따른 경품을 전달하기 위함입니다. 이 정보는 경품 발송 및 반송의 이유로 이벤트 종료 후 1개월 이후에 폐기합니다.\n
+        라. 사업단은 회원 혹은 비회원이 동의하는 경우 이벤트 및 마케팅 홍보를위한 목적으로 아래와 같이 개인정보를 수집, 이용, 파기합니다.\n
+        ㄱ. 이벤트 및 마케팅 홍보를 할 수 있으며, 닉네임 및 이름, 휴대전화 번호, 이메일 주소가 사용됩니다. 이는 신규 서비스 맞춤 제공, 이벤트, 광고성 정보 제공 및 참여기회 제공하기 위함입니다. 사용된 정보는 경품 발송 및 반송의 이유로 이벤트 종료 후 1개월 이후에 폐기합니다.\n
+         ③ 사업단은 회원에 대한 정보를 등록하고, 수시로 찾아내는 “쿠키(Cookie)“를 사용합니다. 쿠키는 어플리케이션이 이용자의 모바일(안드로이드, iOS등)로 전송하는 소량의 정보입니다. 회원께서 어플리케이션에 접속하면 사업단의 컴퓨터는 회원의 운영체제에 있는 쿠키의 내용을 읽고, 회원의 추가정보를 회원의 모바일에서 찾아 접속에 따른 성명, 어플리케이션 정보 등의 추가입력 없이 서비스를 제공할 수 있도록 하고 있습니다. 쿠키는 회원의 모바일은 식별하지만, 회원을 개인적으로 식별하지는 않습니다. 또한 회원께서는 쿠키에 대한 선택권이 있습니다. 모바일의 옵션을 조정함으로써 모든 쿠키를 다 받아들이거나, 쿠키가 설치될 때 통지를 보내도록 하거나, 아니면 모든 쿠키를 거부할 수 있는 선택권을 가질 수 있습니다.\n
+        \n
+        제3조 (개인정보의 이용 및 제공)\n
+        (1) 사업단은 회원의 개인정보를 회사에서 제공하는 서비스 이용과 관련한 목적 외로 이용하거나 타인 또는 타 기업, 기관에 제공하지 않습니다. 그러나 보다 나은 서비스 제공을 위하여 고객의 개인정보를 비즈니스 파트너와 공유할 수 있습니다. 이 경우에도 개인정보 제공 이전에 회원께 비즈니스 파트너가 누구인지, 어떤 정보가 왜 필요한지, 그리고 언제까지 어떻게 보호.관리되는지에 대해 개별적으로 전자우편 및 서면을 통해 고지하여 동의를 구하는 절차를 거치게 되며, 회원께서 동의하지 않는 경우에는 추가적인 정보를 수집하거나 비즈니스 파트너와 공유하지 않습니다.\n
+        (2) 다만, 정보통신 이용촉진 등에 관한 법률에 대한 특별한 규정이 있는 경우, 서비스 제공에 따른 요금정산을 위하여 필요한 경우 또는 통계목적, 학술연구, 시장조사 등을 위하여 필요한 경우로서 특정 개인을 식별할 수 없는 형태로 개인 정보가 제공되는 경우는 예외입니다.\n
+        \n
+        제4조 (개인정보의 관리)\n
+        (1) 개인정보를 정확하게 관리하기 위해 개인정보 입력 시 입력내용을 사전에 확인하는 절차를 거치게 됩니다.\n
+        (2) 오류 정보를 발견한 경우 이를 정정, 삭제할 수 있도록 하는 절차를 두고 있습니다.\n
+        (3) 회원께서 개인정보에 대한 열람 및 정정 요구 시 올바른 정보를 입력할 수 있는 절차나 방법을 마련하고 있습니다.\n
+        (4) 개인정보의 보유 및 보존기간 또는 이용기간이 경과하거나 필요 없게 된 개인정보를 정기적으로 파기 처분하기 위한 절차를 마련하고 있습니다.\n
+        ① 개인정보보호를 위한 기술적 대책\n
+        사업단은 회원의 개인정보를 취급함에 있어 개인정보가 분실, 도난, 누출, 변조 또는 훼손되지 않도록 안전성 확보를 위하여 다음과 같은 기술적 대응을 강구하고 있습니다.\n
+        가. 회원의 개인정보는 비밀번호에 의해 보호되며 중요한 데이터는 별도의 보안기능을 통해 보호되고 있습니다.\n
+        나. 백신프로그램을 이용하여 컴퓨터바이러스에 의한 피해 방지를 위한 조치를 취하고 있습니다.\n
+        ② 개인정보보호를 위한 관리적 대책\n
+        사업단은 개인정보의 안전성을 확보하기 위하여 개인정보에 대한 접근 및 관리에 필요한 절차를 마련하고 있으며, 운영자 PC의 무단사용 방지를 위하여 PC 별로 사용자를 지정한 후 비밀번호를 부여하고 정기적으로 갱신하고 있습니다. 또한 개인정보가 있는 컴퓨터에 접근할 수 있는 컴퓨터(PC)를 제한하고 있습니다.\n
+        ③ 개인정보의 이용/보관 기간\n
+        사업단은 개인정보의 수집 및 제공 받은 목적이 달성되면 개인정보를 파기함을 원칙으로 합니다. 다만, 다음 각 호의 경우 일정기간 동안 예외적으로 수집한 회원정보의 전부 또는 일부를 보관할 수 있습니다.\n
+        무분별한 회원 탈퇴와 재가입으로 인한 피해 최소화, 회원탈퇴 후 변심에 의한 민원처리 등을 처리하기 위하여 회원 탈퇴 후 6개월간 최소한의 회원 정보 보유\n
+        보유 기간을 미리 고지하고 별도의 동의를 받은 경우 해당 보유기간까지 보유\n
+        장기 미 이용 회원 개인정보 별도 분리 보관\n
+        사업단은 관련 법령에 의거하여 휴면 회원의 개인정보를 접근이 불가능한 별도의 보관장치에 분리 보관합니다.\n
+        관련 법령 : 정보통신망 이용촉진 및 정보보호 등에 관한 법률 제 29조 및 동법 시행령 제 16조\n
+        휴면 회원 : 서비스를 1년 이상 이용하지 않은 회원\n
+        다음 조건에 해당하는 경우 휴면 회원으로 전환됩니다.\n
+        모바일의 어플리케이션 로그인 이력이 1년 이상 없는 회원\n
+        탑승 신청 이력이 1년 이상 없는 회원\n
+        사업단은 휴면 전환 30일 전까지 휴면 예정 회원에게 별도 분리 보관되는 사실 및 휴면 예정일, 별도 분리 보관하는 개인정보 항목을 이메일, 서면, 모사전송, 전화 또는 이와 유사한 방법 중 어느 하나의 방법으로 이용자에게 알립니다. 해당 통지 수단에 대한 정보가 부재 또는 오류인 경우에는 모바일 또는 홈페이지 공지사항 게시로 대신합니다.\n
+        휴면 계정으로 전환된 고객의 경우 휴면 기간 동안 로그인, 탑승 신청, 포인트 및 쿠폰 사용 등 사업단에서 제공하는 서비스를 받을 수 없으며, 별도의 본인 인증 절차를 통해 휴면 계정에서 활동 계정으로 변경 시 지속적인 서비스를 받으실 수 있습니다.\n
+        단, 휴면 회원으로 별도 분리 보관된 시점으로부터 2년이 경과하여도 일반 회원 계정으로 복구되지 않을 경우 해당 회원은 탈퇴처리 되며, 5년간 보관 후 개인정보는 파기됩니다.\n
+        ④ 개인정보의 파기\n
+        사업단은 회원께서 회원가입 해지를 요청한 경우 또는 회원께 사전에 고지한 개인정보를 제공 받은 목적이 달성된 경우에 수집한 개인정보를 지체없이 파기합니다.\n
+        \n
+        제5조 (이용자의 권리)\n
+        회원께서는 개인정보에 대한 이용, 처리와 관련하여 개인정보의 정확성 및 안전성 등을 확보함으로써 잘못된 정보로 인한 피해를 사전에 예방하기 위해 다음과 같은 권리를 행사할 수 있습니다.\n
+        (1) 개인정보의 열람 및 정정 회원께서는 회사를 통하여 언제든지 회원가입 등록되어 있는 귀하의 개인정보를 열람하거나 정정을 요청할 수 있습니다.\n
+        (2) 의견수렴 및 불만 처리 사업단은 개인정보보호와 관련하여 회원의 의견과 불만을 제기할 수 있는 창구를 개설하고 있습니다. 개인정보와 관련한 불만이 있으신 분은 사업단의 개인정보 관리 책임자(thustophelper@thustop.com)에게 의견을 주시면 접수 후 조치하여 처리결과를 통보 드립니다.\n
+        \n
+        제6조 (개인 정보 처리위탁)\n
+        사업단은 서비스 제공을 위해 필요한 업무 중 일부를 외부업체로 하여금 개인정보를 위탁하고 있습니다. 현재 회사의 개인정보 위탁처리 기관 및 위탁업무 내용은 다음과 같습니다.\n
+        (1) 전자결제 대행\n
+        - 수탁업체 : (주)다날페이\n
+        \n
+        (2) 휴대폰본인인증\n
+        - 수탁업체 : (주)다날페이\n
+        \n
+        부칙\n
+        이 개인정보처리방침은 내용의 추가, 삭제 및 수정이 있을 시에는 공지사항에 그 적용 일 7일 전부터 적용 일자 전일까지 공지할 것입니다.\n
+         공고일자: 2020년12월 25일\n
+        시행일자: 2020년 12월 25일\n
+    </string>
+
 
     <string name="location_terms_content">위치기반서비스 이용약관</string>
     <string name="personal_data_policies_content">개인정보 처리방침</string>
