QR 코드 화면 완성/ 테스트 결제 프로세스 완성(서버에서 티켓 받는 부분 다시 복구해야함)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -382,6 +382,7 @@
     <string name="personal_data_policies_content">개인정보 처리방침</string>
     <string name="operational_policies_content">개인정보 처리방침</string>
     <string name="business_information_content">
+        (주)더스탑\n
         이번정류장\n\n
         대표 : 김민규\n
         사업자등록번호 : 419-87-01451\n
